31 user and session tracking (#33)
Adding seession and user tracking to the application, including CRD operations on users and sessions
